# Projeto_PCA

./: PCA_KMeans_Project.ipynb  README.md  pyproject.toml
